--- a/newfront/src/business/components/businessCSS.css
+++ b/newfront/src/business/components/businessCSS.css
@@ -1,10 +1,27 @@
-.tablecss{
-    opacity:0.9;
-    width:100%;
+.tablecss {
+    opacity: 0.9;
+    width: 100%;
     padding-left: 30%;
     padding-top: 5%;
 
     padding-right: 30%;
     font-family: Cambria;
 
+}
+
+.field {
+    font-family: Cambria;
+    font-size: large;
+    padding: 4%;
+}
+.fieldsecond{
+    font-family: Cambria;
+    font-size: large;
+    padding: 3%;
+}
+.heading {
+    margin-top: 10%;
+    font-weight: bold;
+    font-size: large;
+    font-family: Cambria
 }
