--- a/newfront/src/business/components/businessCSS.css
+++ b/newfront/src/business/components/businessCSS.css
@@ -31,7 +31,7 @@
     font-size: large;
     margin-left: 5%;
     color: black;
-    padding-bottom: 3%;
+    padding-bottom: 2%;
 }
 .heading {
     margin-top: 10%;
@@ -61,15 +61,23 @@
     -ms-transform: translate(-50%, -50%);
     text-align: center;
 }
-.container:hover .image {
+.containers:hover .image {
     opacity: 0.3;
 }
-.container:hover .middle {
+.containers:hover .middle {
     opacity: 0.8;
 }
 .text {
     background-color: grey;
-
-
     padding: 16px 32px;
+}
+
+#fileLoader
+{
+    display:none;
+}
+/*Icon*/
+.iconcss{
+    position: relative;
+    font-size: 40px;
 }
