--- a/newfront/src/index.css
+++ b/newfront/src/index.css
@@ -135,3 +135,11 @@ height: 43%;
 .pending-class{
   color: red;
 }
+
+.blocks{
+  display: inline-block;
+  border:3px solid black;
+  padding:5px 5px;
+  height:200px;
+  width:450px;
+}
