--- a/newfront/src/index.css
+++ b/newfront/src/index.css
@@ -65,7 +65,7 @@ position: fixed;
   background-color: white;
 }
 .navbar-class-main{
-  background-color: #6B6B6B;
+  background-color: gainsboro;
 
 }
 .navclassa{
@@ -132,6 +132,9 @@ height: 43%;
 .approve-class{
   color:green;
 }
+.confirm-class{
+  color:cornflowerblue;
+}
 .pending-class{
   color: red;
 }
@@ -142,4 +145,19 @@ height: 43%;
   padding:5px 5px;
   height:200px;
   width:450px;
+}
+.registration-school-class{
+  padding: 1%;
+  background-image: url("./images/Schoolregistration.jpg");
+
+}
+.registration-school-wrapper-class {
+opacity: 0.9;
+}
+.registration-business-class{
+  padding: 5%;
+  background-image: url("./images/Schoolregistration.jpg");
+}
+.reject-bs-class{
+  margin: 3%;
 }
