--- a/newfront/src/index.css
+++ b/newfront/src/index.css
@@ -3,10 +3,13 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.signupText{
+  cursor: hand;
+}
 .loginp{
   padding-top: .5%;
   padding-bottom: 1%;
-  margin-top: 5%;
+  margin-top:5%;
   /*margin-bottom: 10%;*/
   margin-left: 35%;
   margin-right: 35%;
